--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .page-title {
   display: block !important;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 20px !important;
   margin-bottom: 20px;
   font-size: 3rem;
 }
